--- a/Naukri_butisoup/research folder/research.ipynb
+++ b/Naukri_butisoup/research folder/research.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('E:/Programs/Naukri_butisoup/latest_backup_mixed.parquet')"
+    "df = pd.read_parquet('E:/Programs/mazumdar_repo/Naukri_butisoup/latest_backup_mixed.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "(270851, 32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "254"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "(232159, 32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,13 +104,6 @@
    "source": [
     "df[df['role_category'] !='Nan'].shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -143,23 +136,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts = []\n",
-    "for i in df[df['role_category'] !='Nan']['role_category'].unique():\n",
-    "    s = df[df['role_category'] == i].shape[0]\n",
-    "    counts.append({'role_category':i,'count':s})"
+    "df['mapped_job_title']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(counts).to_excel('role_category.xlsx',index=False)"
+    "counts = []\n",
+    "for i in df[((df['mapped_job_title'] !='Nan') & (df['mapped_job_title'] !='unclassified'))]['mapped_job_title'].unique():\n",
+    "    s = df[df['mapped_job_title'] == i].shape[0]\n",
+    "    counts.append({'mapped_job_title':i,'count':s})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mapped_job_title</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Mobile / App Developer</td>\n",
+       "      <td>12269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Business Development</td>\n",
+       "      <td>6418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>5359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Technical Architect</td>\n",
+       "      <td>5172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Java Developer</td>\n",
+       "      <td>4357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>Production Manager</td>\n",
+       "      <td>203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Equity Dealer</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Production Engineer</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>Medical Biller</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>Sales Support &amp; Operations</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              mapped_job_title  count\n",
+       "42      Mobile / App Developer  12269\n",
+       "6         Business Development   6418\n",
+       "3            Software Engineer   5359\n",
+       "14         Technical Architect   5172\n",
+       "8               Java Developer   4357\n",
+       "..                         ...    ...\n",
+       "69          Production Manager    203\n",
+       "67               Equity Dealer    125\n",
+       "79         Production Engineer    103\n",
+       "58              Medical Biller     75\n",
+       "80  Sales Support & Operations      5\n",
+       "\n",
+       "[81 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(counts).sort_values(by='count',ascending=False)#.to_excel('Mapped_job_title.xlsx',index=False)"
    ]
   }
  ],
