--- a/Linkedin connection/workin_on_Linkedin.ipynb
+++ b/Linkedin connection/workin_on_Linkedin.ipynb
@@ -14,6 +14,7 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.common.exceptions import NoSuchElementException\n",
     "from selenium.common.exceptions import StaleElementReferenceException\n",
+    "from selenium.webdriver.common.keys import Keys\n",
     "import shutil\n",
     "import pyperclip\n",
     "import time\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,26 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ElementClickInterceptedException",
-     "evalue": "Message: Element <button id=\"ember3835\" class=\"artdeco-button artdeco-button--2 artdeco-button--secondary ember-view\" type=\"button\"> is not clickable at point (1145,322) because another element <div id=\"ember3858\" class=\"artdeco-modal__content ember-view\"> obscures it\nStacktrace:\nRemoteError@chrome://remote/content/shared/RemoteError.sys.mjs:8:8\nWebDriverError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:189:5\nElementClickInterceptedError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:333:5\nwebdriverClickElement@chrome://remote/content/marionette/interaction.sys.mjs:176:11\ninteraction.clickElement@chrome://remote/content/marionette/interaction.sys.mjs:135:11\nclickElement@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:204:29\nreceiveMessage@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:84:31\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mElementClickInterceptedException\u001b[0m          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[85], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnect\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m conbut\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mlower():\n\u001b[1;32m---> 19\u001b[0m     \u001b[43mconbut\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     22\u001b[0m     sendwithoutnotebut \u001b[38;5;241m=\u001b[39m WebDriverWait(driver, \u001b[38;5;241m10\u001b[39m)\u001b[38;5;241m.\u001b[39muntil(EC\u001b[38;5;241m.\u001b[39mvisibility_of_element_located((\n\u001b[0;32m     23\u001b[0m         By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.artdeco-button.artdeco-button--2.artdeco-button--primary.ember-view.ml1\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     24\u001b[0m         )))\n",
-      "File \u001b[1;32mc:\\Users\\PM\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:94\u001b[0m, in \u001b[0;36mWebElement.click\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mclick\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     93\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Clicks the element.\"\"\"\u001b[39;00m\n\u001b[1;32m---> 94\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCLICK_ELEMENT\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\PM\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:395\u001b[0m, in \u001b[0;36mWebElement._execute\u001b[1;34m(self, command, params)\u001b[0m\n\u001b[0;32m    393\u001b[0m     params \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m    394\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_id\n\u001b[1;32m--> 395\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\PM\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:346\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    344\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    345\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 346\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    347\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    348\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\PM\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:245\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    243\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    244\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 245\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[1;31mElementClickInterceptedException\u001b[0m: Message: Element <button id=\"ember3835\" class=\"artdeco-button artdeco-button--2 artdeco-button--secondary ember-view\" type=\"button\"> is not clickable at point (1145,322) because another element <div id=\"ember3858\" class=\"artdeco-modal__content ember-view\"> obscures it\nStacktrace:\nRemoteError@chrome://remote/content/shared/RemoteError.sys.mjs:8:8\nWebDriverError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:189:5\nElementClickInterceptedError@chrome://remote/content/shared/webdriver/Errors.sys.mjs:333:5\nwebdriverClickElement@chrome://remote/content/marionette/interaction.sys.mjs:176:11\ninteraction.clickElement@chrome://remote/content/marionette/interaction.sys.mjs:135:11\nclickElement@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:204:29\nreceiveMessage@chrome://remote/content/marionette/actors/MarionetteCommandsChild.sys.mjs:84:31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# send connection requests\n",
     "while True:\n",
     "    time.sleep(2)\n",
     "    \n",
@@ -170,7 +156,7 @@
     "    li_eles = WebDriverWait(driver, 10).until(EC.visibility_of_all_elements_located((\n",
     "                By.CSS_SELECTOR, \".reusable-search__result-container\"\n",
     "                )))\n",
-    "    \n",
+    "\n",
     "    for li in range(len(li_eles)):\n",
     "        if li > 2:\n",
     "            driver.execute_script(\"arguments[0].scrollIntoView(true);\", li_eles[li-2])\n",
@@ -204,24 +190,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"005780a8-4aa9-425c-81c3-ae90d637ec59\", element=\"49760848-bbac-4331-a8e7-d70d107072ca\")>"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,22 +221,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(driver.find_elements(By.CSS_SELECTOR,'.scaffold-finite-scroll__content li'))"
+    "message = \"\"\"I trust this message finds you in good health.\n",
+    "\n",
+    "Recently, we've been actively engaged with numerous organizations in facilitating their performance appraisal cycles, workforce analytics, and various productivity enhancement endeavors. Our support spans from Excel-based assistance to more sophisticated software solutions.\n",
+    "\n",
+    "I'm reaching out to propose a discussion in May at your convenience. During this conversation, we can delve into how our suite of solutions is aiding organizations in effectively managing their internal compensation functions with reduced stress and heightened control.\n",
+    "\n",
+    "If you find this proposition agreeable, please inform me of your availability, and I will promptly arrange a meeting with our Principal Consultant to address your specific requirements.\n",
+    "\n",
+    "Looking forward to the opportunity to connect.\n",
+    "\n",
+    "Warm regards, Panneer\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.get(f'https://www.linkedin.com/search/results/people/?geoUrn=%5B%22102713980%22%5D&industry=%5B%221810%22%2C%2211%22%2C%22137%22%2C%221912%22%2C%2243%22%2C%2280%22%2C%2291%22%2C%2270%22%2C%22102%22%5D&keywords=head%20of%20talent&network=%5B%22F%22%5D&origin=FACETED_SEARCH&page=19&sid=sl!')"
    ]
   },
   {
@@ -277,9 +253,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "while True:\n",
+    "    time.sleep(3)\n",
+    "    buttons = WebDriverWait(driver, 10).until(EC.visibility_of_all_elements_located((\n",
+    "                    By.CSS_SELECTOR, '.reusable-search__result-container button'\n",
+    "                    )))\n",
     "\n",
-    "li_elements = driver.find_elements(By.XPATH, \"//div[@class='scaffold-finite-scroll__content']/ul/li\")\n",
-    "print(len(li_elements))"
+    "    for button in range(len(buttons)):\n",
+    "        buttons[button].click()\n",
+    "        time.sleep(2)\n",
+    "        messagebox = WebDriverWait(driver, 10).until(EC.visibility_of_element_located((By.CSS_SELECTOR, '.msg-form__contenteditable.t-14.t-black--light.t-normal.flex-grow-1.full-height.notranslate')))\n",
+    "        try:\n",
+    "            name = driver.find_element(By.CSS_SELECTOR, '.pl2.flex-grow-1.overflow-hidden h2').text\n",
+    "        except:\n",
+    "            name = driver.find_element(By.CSS_SELECTOR, '.artdeco-pill.artdeco-pill--slate.artdeco-pill--3.artdeco-pill--dismiss.artdeco-pill--selected.ember-view.mv1.mr1').text\n",
+    "        try:\n",
+    "            mess = [eli.text.split('\\n') for eli in driver.find_elements(By.CSS_SELECTOR, '.msg-s-event-with-indicator.display-flex')]\n",
+    "            earlier_message = ' '.join([' '.join(i) for i in mess])\n",
+    "        except:\n",
+    "            earlier_message = ''\n",
+    "        if 'Warm regards, Panneer' in earlier_message or 'Good to Connect' in earlier_message or 'will get an Idea' in earlier_message:\n",
+    "            driver.find_elements(By.CSS_SELECTOR, '.msg-overlay-bubble-header__controls.display-flex.align-items-center button')[-1].click()# close button\n",
+    "            time.sleep(1)\n",
+    "            continue\n",
+    "        if 'Alisha Tahasildar' in name or  'Arjun Srinath' in name:\n",
+    "            driver.find_elements(By.CSS_SELECTOR, '.msg-overlay-bubble-header__controls.display-flex.align-items-center button')[-1].click()# close button\n",
+    "            time.sleep(1)\n",
+    "            continue\n",
+    "        # name = name.split(' ')[0]\n",
+    "        greet = ('Hi '+ name+',')\n",
+    "        propmessage = greet+'\\n\\n'+message\n",
+    "        messagebox = WebDriverWait(driver, 10).until(EC.visibility_of_element_located((By.CSS_SELECTOR, '.msg-form__contenteditable.t-14.t-black--light.t-normal.flex-grow-1.full-height.notranslate')))\n",
+    "        messagebox.clear()\n",
+    "        lines = propmessage.split('\\n')\n",
+    "        for line in lines:\n",
+    "            messagebox.send_keys(line)\n",
+    "            messagebox.send_keys(Keys.ENTER)\n",
+    "        time.sleep(1)\n",
+    "        driver.find_element(By.CSS_SELECTOR, '.msg-form__send-button.artdeco-button.artdeco-button--1').click()# send button\n",
+    "        time.sleep(3)\n",
+    "        driver.find_elements(By.CSS_SELECTOR, '.msg-overlay-bubble-header__controls.display-flex.align-items-center button')[-1].click()# close button\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "    nextbut = driver.find_element(By.CSS_SELECTOR, '.artdeco-pagination__button.artdeco-pagination__button--next.artdeco-button.artdeco-button--muted.artdeco-button--icon-right.artdeco-button--1.artdeco-button--tertiary.ember-view')\n",
+    "\n",
+    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", nextbut)\n",
+    "\n",
+    "    if nextbut.is_enabled():\n",
+    "        nextbut.click()\n",
+    "    else:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.artdeco-pill.artdeco-pill--slate.artdeco-pill--3.artdeco-pill--dismiss.artdeco-pill--selected.ember-view.mv1.mr1'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'.artdeco-pill artdeco-pill--slate artdeco-pill--3 artdeco-pill--dismiss artdeco-pill--selected ember-view mv1 mr1'.replace(' ','.')"
    ]
   },
   {
